force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <nameField>
        <displayFormat>CID-{0000}</displayFormat>
        <label>Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>