force-app/main/default/objects/Customer__c/fields/Aadhaar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Number__c</fullName>
    <label>Aadhaar Number</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>