force-app/main/default/objects/Customer__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&apos;https://qrcode.tec-it.com/API/QRCode?data=&apos;+ Id ,&apos;test Name &apos;,200,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>