force-app/main/default/objects/Customer__c/fields/Total_Loyality_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Loyality_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Loyality Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>