force-app/main/default/objects/Customer__c/validationRules/IF_Name_is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>IF_Name_is_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name__c)</errorConditionFormula>
    <errorDisplayField>Name__c</errorDisplayField>
    <errorMessage>Name Is empty</errorMessage>
</ValidationRule>