force-app/main/default/objects/Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aadhaar_Number__c</columns>
    <columns>Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Total_Loyality_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>